crates/apollo-compiler/test_data/diagnostics/0077_merge_conflict_deep.txt
Error: cannot select multiple fields into the same alias `x`
    ╭─[0077_merge_conflict_deep.graphql:14:5]
    │
 11 │     x: a
    │     ──┬─  
    │       ╰─── `x` is selected from `O.a` here
    │ 
 14 │     x: b
    │     ──┬─  
    │       ╰─── `x` is selected from `O.b` here
    │ 
    │ Help: Both fields may be present on the schema type, so it's not clear which one should be used to fill the response
────╯

